[project]
name = "hexlet-code"
version = "0.1.0"
description = "Набор консольных игр «Игры разума» для тренировки мозга"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

authors = [
  { name = "Александра Смелая" }
]

dependencies = [
    "prompt>=0.4.1",
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.13.2"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]


[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.games.brain_even:main"
brain-calc = "brain_games.games.brain_calc:main"
brain-gcd = "brain_games.games.brain_gcd:main"
brain-progression = "brain_games.games.brain_progression:main"
brain-prime = "brain_games.games.brain_prime:main"
